Changed miniplayer design - circular progress & dynamic color background
- Replaced old progress bar with circular progress indicator.
- Miniplayer background and progressIndicator  adopt tint of album art.
- Animated miniplayer background color transitions.
- Minor UI adjustments.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -161,4 +161,6 @@ dependencies {
     //audio visual seek bar
     implementation 'com.daasuu:EasingInterpolator:1.0.0'
     implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
+
+    implementation 'com.google.android.material:material:1.5.0-alpha03'
 }
