--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,9 +113,7 @@ dependencies {
     implementation 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     implementation 'com.heinrichreimersoftware:material-intro:2.0.0'
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
-    implementation('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.11.0@aar') {
-        transitive = true
-    }
+    implementation 'com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:1.0.0'
 
     implementation 'com.jakewharton:butterknife:10.2.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
