--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,4 +157,6 @@ dependencies {
     implementation 'me.tankery.lib:circularSeekBar:1.4.0'
 
     implementation 'com.google.android.material:material:1.5.0-alpha03'
+
+    implementation 'com.github.Mursaat:AnimatedGradientTextView:v0.0.6'
 }
